set development as default env

--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=staging node index.js",
+    "start": "NODE_ENV=development node index.js",
     "lint": "eslint --fix ./src/** ./tests/**",
     "build": "./node_modules/.bin/tsc",
     "test": "jest",
-    "task_test": "NODE_ENV=staging NODE_TASK=test node index.js",
-    "task_toncenter_test": "NODE_ENV=staging NODE_TASK=toncenter_test node index.js",
-    "task_process_transactions": "NODE_ENV=staging NODE_TASK=process_transactions node index.js",
-    "task_process_messages": "NODE_ENV=staging NODE_TASK=process_messages node index.js",
-    "task_ton_wallet_action": "NODE_ENV=staging NODE_TASK=ton_wallet_action node index.js",
-    "task_compress_images": "NODE_ENV=staging NODE_TASK=compress_images node index.js",
-    "task_awards_action": "NODE_ENV=staging NODE_TASK=awards_action node index.js",
-    "task_update_logs": "NODE_ENV=staging NODE_TASK=update_logs node index.js",
-    "task_update_stats": "NODE_ENV=staging NODE_TASK=update_stats node index.js",
-    "task_users_action": "NODE_ENV=staging NODE_TASK=users_action node index.js",
-    "task_fill_created_at": "NODE_ENV=staging NODE_TASK=fill_created_at node index.js"
+    "task_test": "NODE_ENV=development NODE_TASK=test node index.js",
+    "task_toncenter_test": "NODE_ENV=development NODE_TASK=toncenter_test node index.js",
+    "task_process_transactions": "NODE_ENV=development NODE_TASK=process_transactions node index.js",
+    "task_process_messages": "NODE_ENV=development NODE_TASK=process_messages node index.js",
+    "task_ton_wallet_action": "NODE_ENV=development NODE_TASK=ton_wallet_action node index.js",
+    "task_compress_images": "NODE_ENV=development NODE_TASK=compress_images node index.js",
+    "task_awards_action": "NODE_ENV=development NODE_TASK=awards_action node index.js",
+    "task_update_logs": "NODE_ENV=development NODE_TASK=update_logs node index.js",
+    "task_update_stats": "NODE_ENV=development NODE_TASK=update_stats node index.js",
+    "task_users_action": "NODE_ENV=development NODE_TASK=users_action node index.js",
+    "task_fill_created_at": "NODE_ENV=development NODE_TASK=fill_created_at node index.js"
   },
   "repository": {
     "type": "git",
