update development envs

--- a/.env.development
+++ b/.env.development
@@ -17,11 +17,11 @@ S3_REGION=us-east-1
 API_SERVER_PORT=3001
 
 TON_PROVIDER_API_HOST=https://toncenter.com/api/v2
-TON_PROVIDER_API_KEY=
+_TON_PROVIDER_API_KEY=
 TON_TARGET_ADDRESS=EQBqIji2RzfQGDJY_EMSNwyLY7gH1FhFxxEQ_TOuOlTuknuY
 
 API_SERVER_ORIGIN="http://localhost:3001"
 
 CLUSTER=localhost
 
-ENABLE_BACKGROUND_WORKERS=false
+ENABLE_BACKGROUND_WORKERS=true
